# tgs2animated

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: data_holder.cpp  data_holder.h
libs/rlottie/src/vector/: config.h
libs/rlottie/src/vector/freetype/: v_ft_raster.cpp
libs/rlottie/vs2019/: rlottie.vcxproj  rlottie.vcxproj.filters
webp/: render.cpp  render.h  utils.cpp  utils.h  webp_builder.cpp  webp_builder.h
